# dynamic-model-car-simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.csv  joze1.pkl  package.xml  params.txt  simulator  simulator_visualization.ipynb  symulator.txt  wrong_data_to_check.csv
.ipynb_checkpoints/: simulator_visualization-checkpoint.ipynb
include/: car_model.h  dynamic_tree.h  simulator.h
includes/: car_model.h  dynamic_tree.h  path.h  simulator.h
launch/: simulation.launch
scripts/: keyboard_steering.py  publish_angle.py  publish_path.py
src/: car_model.cpp  dynamic_tree.cpp  main.cpp  sim_main.cpp  simulator.cpp
